تعديل منطق احتساب الرصيد ومنبثق الإعلان

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,18 +9,19 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400;700&display=swap"
         rel="stylesheet">
+    {% block head %}{% endblock %}
 </head>
 
 <body>
     <div class="container">
+        <div id="banner-ad">
+            <!-- Persistent Banner Ad -->
+            <script async="async" data-cfasync="false"
+                src="//pl27623322.revenuecpmgate.com/07a0ea3dee3fc93775251a64a297df45/invoke.js"></script>
+            <div id="container-07a0ea3dee3fc93775251a64a297df45"></div>
+        </div>
         <header class="header">
             <div class="logo">Smart Lab</div>
-            <div id="banner-ad">
-                <!-- Persistent Banner Ad -->
-                <script async="async" data-cfasync="false"
-                    src="//pl27623322.revenuecpmgate.com/07a0ea3dee3fc93775251a64a297df45/invoke.js"></script>
-                <div id="container-07a0ea3dee3fc93775251a64a297df45"></div>
-            </div>
         </header>
 
         <aside class="sidebar">
