--- a/static/style.css
+++ b/static/style.css
@@ -67,22 +67,19 @@ body {
 }
 
 #banner-ad {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
+    width: 100%;
     background-color: #000;
     padding: 5px 0;
     border-radius: 0 0 5px 5px;
     border-bottom: 2px solid #00ffff;
     box-shadow: 0 2px 12px rgba(0, 255, 255, 0.5);
-    z-index: 9999;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 body {
-    padding-top: 60px;
-    /* Space for fixed banner */
+    /* Remove extra top padding for fixed banner */
+    padding-top: 0;
 }
 
 /* Sidebar */
