إغلاق كتلة جينجا في dashboard.html وحل خطأ Unexpected end of template

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -197,3 +197,4 @@
         document.getElementById("ad2").addEventListener("click", () => {
             showAdModal("popunder2", "https://pl27623329.revenuecpmgate.com/3f/1b/ae/3f1bae06be8fb8243633dd02aa28465b.html");
         });
+        {% endblock %}
