إصلاح نهائي: إضافة id للأزرار وربط الأحداث بشكل صحيح

--- a/templates/ads.html
+++ b/templates/ads.html
@@ -132,15 +132,11 @@
         <div class="ad-list">
             <div class="ad-item">
                 <span class="ad-title">Popunder Ad 1</span>
-                <button class="ad-btn"
-                    onclick="showAdModal('popunder1', 'https://pl27588635.revenuecpmgate.com/e4/06/54/e40654054912ec87321f8ae7b5b8475e.html')">مشاهدة
-                    الإعلان</button>
+                <button class="ad-btn" id="ad1">مشاهدة الإعلان</button>
             </div>
             <div class="ad-item">
                 <span class="ad-title">Popunder Ad 2</span>
-                <button class="ad-btn"
-                    onclick="showAdModal('popunder2', 'https://pl27623329.revenuecpmgate.com/3f/1b/ae/3f1bae06be8fb8243633dd02aa28465b.html')">مشاهدة
-                    الإعلان</button>
+                <button class="ad-btn" id="ad2">مشاهدة الإعلان</button>
             </div>
         </div>
     </div>
